--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,21 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="quesNum">
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:textColor">@color/colorSecondary</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:paddingTop">16dp</item>
+        <item name="android:paddingStart">8dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Subhead</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+
+
     <!-- Irfan Scrollview  -->
 
     <style name="i_scrollview">
