--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,7 +32,7 @@
 
     <style name="quesNum">
         <item name="android:background">@color/colorPrimary</item>
-        <item name="android:textColor">@color/colorSecondary</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:padding">12dp</item>
         <item name="android:textSize">18dp</item>
