--- a/app/src/main/res/drawable/bacground_border.xml
+++ b/app/src/main/res/drawable/bacground_border.xml
@@ -2,11 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <padding
-        android:bottom="8px"
-        android:left="8px"
-        android:right="8px"
-        android:top="8px" />
+        android:bottom="3px"
+        android:left="3px"
+        android:right="3px"
+        android:top="3px" />
+    <corners android:radius="20px" />
     <stroke
-        android:width="8px"
-        android:color="@color/colorHeading" />
+        android:width="3px"
+        android:color="@color/colorPrimaryAlpha" />
 </shape>
