--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,181 +10,228 @@
             type="edu.aku.hassannaqvi.kmc_screening.ui.other.MainActivity" />
     </data>
 
-    <ScrollView
-        android:id="@+id/activity_main"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="72dp"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin">
+    <LinearLayout style="@style/linearlayout_view_wt_bound">
 
-        <LinearLayout style="@style/vlinearlayout">
-            <!-- Login progress -->
+        <TextView
+            android:id="@+id/lblheader"
+            style="@style/textview_heading"
+            android:background="@color/dullWhile"
+            android:padding="10dp"
+            android:text="Main Menu"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/lblheader"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
-                android:background="@color/dullWhile"
-                android:text="Main Menu"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold" />
+        <ScrollView
+            android:id="@+id/activity_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin">
 
-            <TextView
-                android:id="@+id/recordSummary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:background="@color/black"
-                android:padding="20dp"
-                android:text="Records Summary"
-                android:textColor="@color/green"
-                android:textSize="14sp"
-                android:typeface="monospace" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:orientation="horizontal"
-                android:visibility="gone">
+            <LinearLayout style="@style/vlinearlayout">
 
                 <TextView
-                    style="?android:textAppearanceMedium"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/recordSummary"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="3"
-                    android:background="@android:color/transparent"
-                    android:text="AREA: "
-                    android:textAlignment="center"
-                    android:textColor="@android:color/black"
-                    android:textStyle="bold" />
+                    android:layout_gravity="center_horizontal"
+                    android:background="@color/black"
+                    android:padding="20dp"
+                    android:text="Records Summary"
+                    android:textColor="@color/green"
+                    android:textSize="14sp"
+                    android:typeface="monospace" />
 
-                <Spinner
-                    android:id="@+id/spAreas"
-                    style="@style/Widget.AppCompat.Spinner.Underlined"
-                    android:layout_width="0dp"
+                <LinearLayout
+                    style="@style/linearlayout_view"
+                    android:layout_marginBottom="20dp"
+                    android:baselineAligned="false"
+                    android:orientation="horizontal">
+
+                    <include
+                        android:id="@+id/pwReg"
+                        layout="@layout/menuitem"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/_120sdp"
+                        android:layout_marginEnd="40dp"
+                        android:layout_weight="1"
+                        android:onClick="@{(v) -> callback.openForm(0)}" />
+
+                    <include
+                        android:id="@+id/pwSurv"
+                        layout="@layout/menuitem"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/_120sdp"
+                        android:layout_weight="1"
+                        android:onClick="@{(v) -> callback.openForm(1)}" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    style="@style/linearlayout_view"
+                    android:layout_marginBottom="20dp"
+                    android:baselineAligned="false"
+                    android:orientation="horizontal">
+
+                    <include
+                        android:id="@+id/form01Eligible"
+                        layout="@layout/menuitem"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/_120sdp"
+                        android:layout_marginEnd="40dp"
+                        android:layout_weight="1"
+                        android:onClick="@{(v) -> callback.openForm(2)}" />
+
+                    <include
+                        android:id="@+id/form02Rec"
+                        layout="@layout/menuitem"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/_120sdp"
+                        android:layout_weight="1"
+                        android:onClick="@{(v) -> callback.openForm(3)}" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    style="@style/linearlayout_view"
+                    android:layout_marginBottom="20dp"
+                    android:baselineAligned="false"
+                    android:orientation="horizontal">
+
+                    <include
+                        android:id="@+id/form03FUp"
+                        layout="@layout/menuitem"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/_120sdp"
+                        android:layout_marginEnd="40dp"
+                        android:layout_weight="1"
+                        android:onClick="@{(v) -> callback.openForm(4)}" />
+
+                    <include
+                        android:id="@+id/formMR"
+                        layout="@layout/menuitem"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/_120sdp"
+                        android:layout_weight="1"
+                        android:onClick="@{(v) -> callback.openForm(5)}" />
+
+                </LinearLayout>
+
+                <!--            <Button
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="16dp"
+                                android:layout_marginBottom="8dp"
+                                android:onClick="@{(v) -> callback.openForm(0)}"
+                                android:text="@string/pw_reg" />
+
+                            <Button
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="16dp"
+                                android:layout_marginBottom="8dp"
+                                android:onClick="@{(v) -> callback.openForm(1)}"
+                                android:text="@string/pw_sur" />
+
+                            <Button
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="16dp"
+                                android:layout_marginBottom="8dp"
+                                android:onClick="@{(v) -> callback.openForm(2)}"
+                                android:text="FORM-1 PARTICIPANT ELIGIBILITY SCREENING" />
+
+                            <Button
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="16dp"
+                                android:layout_marginBottom="8dp"
+                                android:onClick="@{(v) -> callback.openForm(3)}"
+                                android:text="FORM-2 RECRUITMENT FORM" />
+
+                            <Button
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="16dp"
+                                android:layout_marginBottom="8dp"
+                                android:onClick="@{(v) -> callback.openForm(4)}"
+                                android:text="FORM-3 FOLLOWUP FORM" />-->
+
+                <Button
+                    android:id="@+id/syncServer"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="35"
-                    android:gravity="center"
-                    android:popupBackground="#ffffff" />
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:onClick="syncServer"
+                    android:text="Upload Data" />
+
+                <LinearLayout
+                    android:id="@+id/adminsec"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/syncDevice"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="8dp"
+                        android:onClick="syncDevice"
+                        android:text="Download Data"
+                        android:visibility="gone" />
+
+                    <Button
+                        android:id="@+id/downloadApp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="8dp"
+                        android:background="@color/red"
+                        android:text="DOWNLOAD APP"
+                        android:textColor="@color/white"
+                        android:visibility="gone" />
+
+                    <Button
+                        android:id="@+id/updateApp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="8dp"
+                        android:background="#D60000"
+                        android:onClick="updateApp"
+                        android:text="Update App"
+                        android:visibility="gone" />
+
+                    <Button
+                        android:id="@+id/openDB"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="8dp"
+                        android:onClick="openDB"
+                        android:text="Open Database Manager" />
+
+                    <Button
+                        android:id="@+id/testGPS"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="8dp"
+                        android:onClick="testGPS"
+                        android:text="Test GPS Coordinates" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
-                android:onClick="@{(v) -> callback.openForm(0)}"
-                android:text="@string/pw_reg" />
+        </ScrollView>
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
-                android:onClick="@{(v) -> callback.openForm(1)}"
-                android:text="@string/pw_sur" />
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
-                android:onClick="@{(v) -> callback.openForm(2)}"
-                android:text="FORM-1 PARTICIPANT ELIGIBILITY SCREENING" />
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
-                android:onClick="@{(v) -> callback.openForm(3)}"
-                android:text="FORM-2 RECRUITMENT FORM" />
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
-                android:onClick="@{(v) -> callback.openForm(4)}"
-                android:text="FORM-3 FOLLOWUP FORM" />
-
-            <Button
-                android:id="@+id/syncServer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
-                android:onClick="syncServer"
-                android:text="Upload Data" />
-
-            <LinearLayout
-                android:id="@+id/adminsec"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <Button
-                    android:id="@+id/syncDevice"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="8dp"
-                    android:onClick="syncDevice"
-                    android:text="Download Data"
-                    android:visibility="gone" />
-
-                <Button
-                    android:id="@+id/downloadApp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="8dp"
-                    android:background="@color/red"
-                    android:text="DOWNLOAD APP"
-                    android:textColor="@color/white"
-                    android:visibility="gone" />
-
-                <Button
-                    android:id="@+id/updateApp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="8dp"
-                    android:background="#D60000"
-                    android:onClick="updateApp"
-                    android:text="Update App"
-                    android:visibility="gone" />
-
-                <Button
-                    android:id="@+id/openDB"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="8dp"
-                    android:onClick="openDB"
-                    android:text="Open Database Manager" />
-
-                <Button
-                    android:id="@+id/testGPS"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="8dp"
-                    android:onClick="testGPS"
-                    android:text="Test GPS Coordinates" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </ScrollView>
+    </LinearLayout>
 
 </layout>
