--- a/app/src/main/res/drawable/bacground_border.xml
+++ b/app/src/main/res/drawable/bacground_border.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <solid android:color="#ffffff" />
     <padding
         android:bottom="3px"
         android:left="3px"
         android:right="3px"
         android:top="3px" />
-    <corners android:radius="20px" />
+    <corners android:radius="10px" />
     <stroke
         android:width="3px"
         android:color="@color/colorPrimaryAlpha" />
